# kv_engine

./: CMakeLists.txt  precompiled_headers.h
auditd/generator/: CMakeLists.txt
auditd/src/: CMakeLists.txt
auditd/tests/: CMakeLists.txt
cbcrypto/: CMakeLists.txt
cbsasl/: CMakeLists.txt
cluster_framework/: CMakeLists.txt
daemon/: CMakeLists.txt  alloc_hooks.def  alloc_hooks_jemalloc.cc  buckets.cc  buckets.h  connection.cc  connection.h  cookie.cc  mcbp.cc  mcbp_executors.cc  memcached.cc  settings.cc  settings.h  statemachine.cc  tracing.cc
daemon/protocol/mcbp/: engine_wrapper.cc  mutation_context.cc  mutation_context.h
docs/: BinaryProtocol.md
docs/dcp/documentation/: building-a-simple-client.md  concepts.md
engines/crash_engine/: CMakeLists.txt
engines/default_engine/: CMakeLists.txt
engines/ep/: CMakeLists.txt  configuration.json
engines/ep/benchmarks/: benchmark_memory_tracker.cc  benchmark_memory_tracker.h  defragmenter_bench.cc  ep_engine_benchmarks_main.cc  executor_bench.cc  hash_table_bench.cc  kvstore_bench.cc
engines/ep/docs/: stats.org
engines/ep/management/: kv_trace_dump  sync_repl.py
engines/ep/src/: checkpoint.cc  checkpoint.h  checkpoint_manager.cc  configuration.cc  conn_notifier.cc  connmap.cc  diskdockey.cc  diskdockey.h  ep_bucket.cc  ep_bucket.h  ep_engine.cc  ep_engine.h  ep_vb.cc  ephemeral_bucket.cc  ephemeral_bucket.h  ephemeral_vb.cc  ephemeral_vb.h  executorpool.cc  executorthread.cc  flusher.cc  folly_executorpool.cc  globaltask.h  hash_table.cc  item.h  kv_bucket.cc  kv_bucket.h  kv_bucket_iface.h  kvshard.cc  kvshard.h  kvstore.h  memory_tracker.cc  memory_tracker.h  monotonic.h  seqlist.h  stats.h  storeddockey.h  taskqueue.cc  threadlocal.h  threadlocal_posix.h  threadlocal_win32.h  (+8 more)
engines/ep/src/collections/: flush.cc  flush.h
engines/ep/src/couch-kvstore/: couch-fs-stats.cc  couch-kvstore.cc  couch-kvstore.h
engines/ep/src/dcp/: stream.cc  (+10 more)
engines/ep/tests/: CMakeLists.txt  ep_testsuite.cc  ep_testsuite_dcp.cc
engines/ewouldblock_engine/: CMakeLists.txt
engines/nobucket/: CMakeLists.txt
engines/utilities/: CMakeLists.txt
include/memcached/: dockey.h  engine.h  server_allocator_iface.h
logger/: CMakeLists.txt  spdlogger.cc
programs/: CMakeLists.txt
programs/dcpdrain/: CMakeLists.txt
programs/dcplatency/: CMakeLists.txt
programs/engine_testapp/: CMakeLists.txt  mock_server.cc  mock_server.h
programs/kvlite/: CMakeLists.txt
programs/mcctl/: CMakeLists.txt
programs/mclogsplit/: CMakeLists.txt
programs/mcstat/: CMakeLists.txt
programs/mctimings/: CMakeLists.txt
programs/mctrace/: CMakeLists.txt
protocol/connection/: CMakeLists.txt
protocol/mcbp/: CMakeLists.txt
protocol/mcbp/libmcbp/: status_to_string.cc
rbac/: CMakeLists.txt
statistics/: CMakeLists.txt
tests/cbnt_tests/: cbnt_test_list.yml
tests/dockey/: CMakeLists.txt
tests/engine_error/: CMakeLists.txt
tests/error_map_sanity_check/: CMakeLists.txt
tests/executor/: CMakeLists.txt
tests/histograms/: CMakeLists.txt
tests/mcbp/: CMakeLists.txt  mcbp_test.h  mock_connection.h
tests/memory_tracking_test/: CMakeLists.txt  memory_tracking_test.cc
tests/scripts_tests/: CMakeLists.txt
tests/sizes/: CMakeLists.txt
tests/statistics/: CMakeLists.txt
tests/testapp/: CMakeLists.txt  testapp_tests.cc
tests/testapp_cluster/: CMakeLists.txt
tests/topkeys/: CMakeLists.txt
tests/tracing/: CMakeLists.txt  tracing_test.cc
tests/unsigned_leb128/: CMakeLists.txt
testsuite/basic/: CMakeLists.txt
time/: CMakeLists.txt
tracing/: CMakeLists.txt  tracer.cc  tracer.h
utilities/: CMakeLists.txt
xattr/: CMakeLists.txt
(+20 files in other folders)
