add_static_library_with_pch(ewouldblock_engine
            ewouldblock_engine.h
            ewouldblock_engine_public.h
            ewouldblock_engine.cc)
target_link_libraries(ewouldblock_engine
                      dirutils
                      engine_utilities
                      mcbp
                      mcd_util
                      xattr)
